; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/orinoco/extr_spectrum_cs.c_spectrum_cs_hard_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/orinoco/extr_spectrum_cs.c_spectrum_cs_hard_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.orinoco_private = type { %struct.orinoco_pccard* }
%struct.orinoco_pccard = type { %struct.pcmcia_device* }
%struct.pcmcia_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.orinoco_private*)* @spectrum_cs_hard_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spectrum_cs_hard_reset(%struct.orinoco_private* %0) #0 {
  %2 = alloca %struct.orinoco_private*, align 8
  %3 = alloca %struct.orinoco_pccard*, align 8
  %4 = alloca %struct.pcmcia_device*, align 8
  store %struct.orinoco_private* %0, %struct.orinoco_private** %2, align 8
  %5 = load %struct.orinoco_private*, %struct.orinoco_private** %2, align 8
  %6 = getelementptr inbounds %struct.orinoco_private, %struct.orinoco_private* %5, i32 0, i32 0
  %7 = load %struct.orinoco_pccard*, %struct.orinoco_pccard** %6, align 8
  store %struct.orinoco_pccard* %7, %struct.orinoco_pccard** %3, align 8
  %8 = load %struct.orinoco_pccard*, %struct.orinoco_pccard** %3, align 8
  %9 = getelementptr inbounds %struct.orinoco_pccard, %struct.orinoco_pccard* %8, i32 0, i32 0
  %10 = load %struct.pcmcia_device*, %struct.pcmcia_device** %9, align 8
  store %struct.pcmcia_device* %10, %struct.pcmcia_device** %4, align 8
  %11 = load %struct.pcmcia_device*, %struct.pcmcia_device** %4, align 8
  %12 = call i32 @spectrum_reset(%struct.pcmcia_device* %11, i32 0)
  ret i32 0
}

declare dso_local i32 @spectrum_reset(%struct.pcmcia_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
